# sandbox

./: .gitignore  Project.toml  README.md  request.txt
clustree/: learnings.md  proto.ipynb  pyproject.toml  sandbox.ipynb  sandbox.py  understand_image.ipynb  use_clustree.ipynb  use_clustree.py
databricks/asset_bundle_app_deployment/hello-world-app/: README.md  app.py  databricks.yml
databricks/asset_bundle_app_deployment/streamlit-app/: app.py
diss/: tikz.jl  understand_rand.jl
diss/gstools/: learning.ipynb  pyproject.toml  read.jl
diss/plane_flying/: visualise.ipynb
ibm_time_series/: README.md
pdf/: main.py
practical_time_series/: README.md
practical_time_series/week1/: Scatterplot.ipynb
pypi/: README.md
python_dev_utils/: README.md
python_standard_library/: README.md  dataclasses.py
shiny_for_python/: 01_app_dynamic_plots_global_input.py  02_app_dynamic_plots_dynamic_input.py  03_app_dynamic_plot_areas.py  05_concurrent_async_tasks.py  06_conditional_ui.py  README.md  app.py  app_dynamic_plot_areas.py  app_dynamic_plots_global_input.py  pyproject.toml
shiny_for_python/toy_example/: 01_app_dynamic_plots_global_input.py  05_concurrent_async_tasks.py  07_shiny_express_vs_shiny.py
tox/: README.md
web_scrape/: interests.csv  main.py  names.py  pyproject.toml  scrape_academic.ipynb  src.py  summary.csv
